# bevy_picoui

./: .gitignore  Cargo.toml  README.md
assets/: test_bed.wgsl  transformations.wgsl
assets/shaders/: custom_material.wgsl  rounded_sdf.wgsl
examples/: anchors.rs  blend_modes.rs  coordinate_systems.rs  custom_material.rs  image.rs  many_buttons.rs  movable.rs  nine_patch.rs  rounded_sdf_test.rs  scroll.rs  stacks.rs  test_bed.rs  text_3d_position.rs  tooltip.rs  tutorial.rs  vector_shapes.rs
src/: arc_mesh.rs  guard.rs  hash.rs  im3dtext.rs  impico.rs  lib.rs  main.rs  palette.rs  pico.rs  rectangle_material.rs  rectangle_material.wgsl  renderer.rs  transformations.wgsl  view_transformations.wgsl  widgets.rs
