[package]
name = "bevy_picoui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"

[dev-dependencies]
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy_coordinate_systems = { git = "https://github.com/DGriffin91/bevy_coordinate_systems" }
bevy_vector_shapes = "0.7.0"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
